<resources>
    <string name="app_name">News Hunt</string>
    <string name="sign_in">SIGN IN</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>
    <string name="news_that_matters_to_you">News that matters to you</string>
    <string name="newshunt">NEWSHUNT</string>
    <string name="signup_with_email">Sign up with Email</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="passowrd">Passowrd</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="latest_news">Latest News</string>
    <string name="heatwave_text">Heatwave: Hospitals under KMC put on standby for heatstroke patients</string>
    <string name="ary_news">ARY News</string>
    <string name="date">23 May 2023</string>
    <string name="largetext">KARACHI: A summer heatwave is to hit Karachi starting from next week, May 5 and probably lasting till May 8 (Friday), as predicted by the MET office, ARY News reported.
        \n\n\n Emergency has been declared in hospitals that come under the jurisdiction of Karachi Municipal Corporation (KMC).
        \n\nRead More: Coronavirus pandemic may reach its peak next month: Karachi mayor Mayor Karachi,
        \n\n Waseem Akhtar has issued special directives in this regard for the healthcare services to stand by, be prepared and vigilant to deal with possible heatstroke cases in the coming days.
        The Pakistan Meteorological Department (PMD) predicted on May 1 that Karachi may experience a heatwave from May 5–8 due to a likely change in the direction of winds.KARACHI: A summer heatwave is to hit Karachi starting from next week, May 5 and probably lasting till May 8 (Friday), as predicted by the MET office, ARY News reported.\n\n\n Emergency has been declared in hospitals that come under the jurisdiction of Karachi Municipal Corporation (KMC). \n\nRead More: Coronavirus pandemic may reach its peak next month: Karachi mayor Mayor Karachi,\n\n Waseem Akhtar has issued special directives in this regard for the healthcare services to stand by, be prepared and vigilant to deal with possible heatstroke cases in the coming days. The Pakistan Meteorological Department (PMD) predicted on May 1 that Karachi may experience a heatwave from May 5–8 due to a likely change in the direction of winds</string>
    <string name="view_source">View Source</string>
    <string name="text_percent">80%</string>
    <string name="signin_to_customize_news">Signin to customize news</string>
    <string name="guest">Guest</string>
    <string name="str_send">Send</string>
    <string name="str_password_reset">Password Reset</string>
    <string name="str_reset">Reset</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_new_password">Confirm New Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="str_userName">Sana Khan</string>
    <string name="str_profile">Profile</string>
    <string name="str_edit">Edit</string>
    <string name="str_useremail">Sanakhan21@email.com</string>
    <string name="user_pasword">123123</string>
    <string name="str_mobilenumber">+92 3478923211</string>
    <string name="str_save">Save</string>
    <string name="str_next">Next</string>
    <string name="str_news">News</string>
    <string name="str_opinion">Opinion</string>
    <string name="str_trending">Trending</string>
    <string name="str_slidertext">The 7 worst business software</string>
    <string name="str_category">Category</string>
    <string name="str_language">Language</string>
</resources>