<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgound_image">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/newshunt_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/newshunt"
            android:textColor="@color/black"
            android:textSize="@dimen/_36ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:letterSpacing="0.11"
            android:text="@string/news_that_matters_to_you"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signupemail"
            android:layout_width="@dimen/_205sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:backgroundTint="@color/blue"
            android:drawablePadding="@dimen/_8sdp"
            android:foreground="?attr/selectableItemBackground"
            android:maxLines="1"
            android:text="@string/signup_with_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signupgoogle"
            android:layout_width="@dimen/_205sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/red"
            android:text="@string/signup_with_google"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signupemail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signupfacebook"
            android:layout_width="@dimen/_205sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/mariner"
            android:text="@string/signup_with_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signupgoogle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toStartOf="@+id/et_signin"
            app:layout_constraintStart_toStartOf="@+id/btn_signupfacebook"
            app:layout_constraintTop_toBottomOf="@+id/btn_signupfacebook" />

        <TextView
            android:id="@+id/et_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>