<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgound_image">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center"
            android:text="Sign in"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@+id/back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_icon"
            app:layout_constraintTop_toTopOf="@+id/back_icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/newshunt_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/newshunt"
            android:textColor="@color/black"
            android:textSize="@dimen/_36ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:letterSpacing="0.11"
            android:text="@string/news_that_matters_to_you"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/top_corner_signin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />

            <!-- Forgot Password TextView -->
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                app:layout_constraintVertical_chainStyle="packed" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signin"
                android:layout_width="@dimen/_205sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:backgroundTint="#45C9F4"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_signin"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="@+id/btn_signin"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin"
                app:layout_constraintVertical_bias="0.481" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>