<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">
    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:src="@drawable/profileimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/tv_profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ebrima_bold"
        android:text="@string/str_userName"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_62sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:gravity="top"
        android:fontFamily="@font/ebrima_bold"
        android:text="@string/str_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profileName" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:text="@string/str_edit"
        android:fontFamily="@font/ebrima_bold"
        android:textColor="@color/edit_textcolor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/et_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_userName" />

    <EditText
        android:id="@+id/et_useremial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_8sdp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/ebrima_bold"
        android:text="@string/str_useremail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />

    <TextView
        android:id="@+id/tv_useremial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:text="@string/str_edit"
        android:fontFamily="@font/ebrima_bold"
        android:textColor="@color/edit_textcolor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/et_useremial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />

    <EditText
        android:id="@+id/et_userpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/ebrima_bold"
        android:inputType="textPassword"
        android:text="@string/user_pasword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_useremial" />

    <TextView
        android:id="@+id/tv_userpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:text="@string/str_edit"
        android:fontFamily="@font/ebrima_bold"
        android:textColor="@color/edit_textcolor"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/et_userpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_useremial" />

    <EditText
        android:id="@+id/et_usernumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/_22sdp"
        android:fontFamily="@font/ebrima_bold"
        android:text="@string/str_mobilenumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userpassword" />

    <TextView
        android:id="@+id/tv_usernumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:text="@string/str_edit"
        android:textColor="@color/edit_textcolor"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/ebrima_bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_usernumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_usernumber" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="@dimen/_205sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:backgroundTint="#45C9F4"
        android:text="@string/str_save"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usernumber" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>